kubernetes/apps/adventurelog/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adventurelog-db
  namespace: adventurelog
spec:
  selector:
    app: adventurelog-db
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: adventurelog-backend
  namespace: adventurelog
spec:
  selector:
    app: adventurelog-backend
  ports:
    - port: 80
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: adventurelog-frontend
  namespace: adventurelog
spec:
  selector:
    app: adventurelog-frontend
  ports:
    - port: 3000
      targetPort: 3000
